@@ -1,8 +1,12 @@
 ==== version history of open-console-core
 
 version 0.03:
+
 	Fixes:
 	- too much in MANIFEST
+
+	Improvements:
+	- many new fields in Service objects.
 
 version 0.02: Wed 18 Sep 14:56:19 CEST 2024
 
